# Simple-Chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  tools.py
static/: index.html  script.js  style.css
workspace_notes/: TestNote.txt
